--- a/delta-table/work-dir/Untitled.ipynb
+++ b/delta-table/work-dir/Untitled.ipynb
@@ -12,10 +12,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 20,
    "id": "098abe99-4734-496c-bc25-e5d468e9a7c3",
    "metadata": {},
    "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "25/01/09 11:04:13 WARN ObjectStore: Failed to get database delta, returning NoSuchObjectException\n",
+      "                                                                                \r"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Deleted 0 files and directories in a total of 1 directories.\n"
+     ]
+    },
     {
      "data": {
       "text/html": [
@@ -37,31 +52,31 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>1</th>\n",
+       "      <th>path</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>1</td>\n",
+       "      <td>file:/data/pv/foo</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "   1\n",
-       "0  1"
+       "                path\n",
+       "0  file:/data/pv/foo"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "spark.sql(\"\"\"\n",
-    "SELECT 1;\n",
+    "VACUUM delta.`/data/pv/foo`;\n",
     "\"\"\").toPandas()"
    ]
   },
